<resources>
    <string name="app_name">ExerciseFiqma</string>
    <string name="txt_well">Welcome to Lafyuu</string>
    <string name="txt_sign">Sign in to continue</string>
    <string name="btn_sign">Sign in</string>
    <string name="or">OR</string>
    <string name="google_">Login with Google</string>
    <string name="fb">Login with facebook</string>
    <string name="txt_forgot">Forgot Password?</string>
    <string name="txt_account">Don’t have a account?</string>
    <string name="txt_register">Register</string>
    <string name="register_txt">Create an new account</string>
    <string name="sing_up">Sign Up</string>
    <string name="let_get_up">Let’s Get Started</string>
    <string name="have_account">have a account?</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="more_category">More Category</string>
    <string name="flash_sale">Flash Sale</string>
</resources>