<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/txt_well"
                android:textAlignment="center"
                android:textColor="@color/neutral_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon1" />


            <TextView
                android:id="@+id/txt_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableTint="@color/color_tint"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/txt_sign"
                android:textAlignment="center"
                android:textColor="@color/neutral_grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

            <EditText
                android:id="@+id/edit_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="28dp"
                android:background="@drawable/selector_edot"
                android:drawableLeft="@drawable/ic_group"
                android:drawablePadding="12dp"
                android:drawableTint="@color/color_tint"
                android:fontFamily="@font/poppins"
                android:hint="Your mail"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_sign" />

            <EditText
                android:id="@+id/edit_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="13dp"
                android:background="@drawable/selector_edot"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:drawableTint="@color/color_tint"
                android:fontFamily="@font/poppins"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_mail"

                />

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="22dp"
                android:background="@drawable/rounded_btn"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/btn_sign"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_pass" />

            <TextView
                android:id="@+id/or"
                android:layout_width="26sp"
                android:layout_height="26sp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/neutral_grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign" />

            <ImageView
                android:layout_width="134dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="31dp"
                android:src="@drawable/ic_line_37"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign" />

            <ImageView
                android:layout_width="134dp"
                android:layout_height="0dp"
                android:layout_marginTop="31dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_line_37"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign" />

            <Button
                android:id="@+id/btn_google"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_btn_google"
                android:drawableLeft="@drawable/ic_group_121"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/google_"
                android:textAllCaps="false"
                android:textColor="@color/neutral_grey"
                android:textSize="15dp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or" />

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="22dp"
                android:background="@drawable/rounded_btn_google"
                android:drawableLeft="@drawable/ic_facebook"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:text="@string/fb"
                android:textAllCaps="false"
                android:textColor="@color/neutral_grey"
                android:textSize="15dp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_google" />

            <TextView
                android:id="@+id/txt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_forgot"
                android:textColor="@color/primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_fb" />

            <TextView
                android:id="@+id/txt_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center_horizontal"
                android:text="@string/txt_account"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/txt_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center_horizontal"
                android:text="@string/txt_register"
                android:textAlignment="center"
                android:textColor="@color/primary_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_account"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>